@@ -163,7 +163,8 @@ Build
 
 Bug Fixes
 
-
+* SOLR-4813: Fix SynonymFilterFactory to allow init parameters for
+  tokenizer factory used when parsing synonyms file.  (Shingo Sasaki, hossman)
 
 ======================= Lucene 4.3.0 =======================
 
